--- a/HW 4.ipynb
+++ b/HW 4.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -293,17 +293,53 @@
       "Unique ID                                      0.00000\n",
       "dtype: float64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Property Id                                     int64\n",
+       "Property Name                                  object\n",
+       "Address 1                                      object\n",
+       "City                                           object\n",
+       "Postal Code                                    object\n",
+       "Province                                       object\n",
+       "Primary Property Type - Self Selected          object\n",
+       "Number of Buildings                             int64\n",
+       "Year Built                                      int64\n",
+       "Property GFA - Self-Reported (m²)              object\n",
+       "ENERGY STAR Score                             float64\n",
+       "Site Energy Use (GJ)                           object\n",
+       "Weather Normalized Site Energy Use (GJ)        object\n",
+       "Site EUI (GJ/m²)                              float64\n",
+       "Weather Normalized Site EUI (GJ/m²)           float64\n",
+       "Source Energy Use (GJ)                         object\n",
+       "Weather Normalized Source Energy Use (GJ)     float64\n",
+       "Source EUI (GJ/m²)                            float64\n",
+       "Weather Normalized Source EUI (GJ/m²)         float64\n",
+       "Total GHG Emissions (Metric Tons CO2e)         object\n",
+       "Total GHG Emissions Intensity (kgCO2e/m²)     float64\n",
+       "Direct GHG Emissions (Metric Tons CO2e)        object\n",
+       "Direct GHG Emissions Intensity (kgCO2e/m²)    float64\n",
+       "Electricity Use - Grid Purchase (kWh)          object\n",
+       "Natural Gas Use (GJ)                          float64\n",
+       "Year Ending                                     int64\n",
+       "Unique ID                                      object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "##1.2 \n",
     "\n",
     "#Use regex to clean string data and remove any non-numerica characters, then we will utilize the pd.to.numeric function to covert the values to floats\n",
-    "df['Natural Gas Use (GJ)'] = df['Natural Gas Use (GJ)'].astype(str).str.replace(r'[^0-9.\\-]', '', regex=True)\n",
+    "df['Natural Gas Use (GJ)'] = df['Natural Gas Use (GJ)'].astype(str).str.replace(r',', '', regex=True)\n",
     "df['Natural Gas Use (GJ)'] = pd.to_numeric(df['Natural Gas Use (GJ)'], errors='coerce')\n",
     "\n",
     "#Use regex to clean string data and remove any non-numerica characters, then we will utilize the pd.to.numeric function to covert the values to floats\n",
-    "df['Weather Normalized Source Energy Use (GJ)'] = df['Weather Normalized Source Energy Use (GJ)'].astype(str).str.replace(r'[^0-9.\\-]', '', regex=True)\n",
+    "df['Weather Normalized Source Energy Use (GJ)'] = df['Weather Normalized Source Energy Use (GJ)'].astype(str).str.replace(r',', '', regex=True)\n",
     "df['Weather Normalized Source Energy Use (GJ)'] = pd.to_numeric(df['Weather Normalized Source Energy Use (GJ)'], errors='coerce')\n",
     "\n",
     "#calculate the median in the Natural gas column, and then fill the nulls with that values, print the median value for a check\n",
@@ -320,7 +356,17 @@
     "missing_percentage = df.isnull().mean()*100\n",
     "print(missing_percentage)\n",
     "\n",
-    "\n"
+    "#double check that they data types are now floats \n",
+    "display(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##1.3 Extracting and Cleaning Data Using Regex\n",
+    "\n",
+    "We now need to use Regex, to "
    ]
   }
  ],
